--- a/_data/locales/pt.yml
+++ b/_data/locales/pt.yml
@@ -30,7 +30,7 @@ panel:
 copyright:
   # Shown at the bottom of the post
   license:
-    template: Esta publicação está licenciado sob :LICENSE_NAME pelo autor.
+    template: Esta publicação está licenciada sob :LICENSE_NAME pelo autor.
     name: CC BY 4.0
     link: https://creativecommons.org/licenses/by/4.0/
 
